re init front-end vue,vite, and tailwind
